# rssa

async-hello/: Cargo.toml
async-hello/src/: main.rs
ch07/tutor-web-app-ssr/: Cargo.toml
ch07/tutor-web-app-ssr/static/iter1/: index.html
ch07/tutor-web-service/src/iter2/: handlers.rs
ch07/tutor-web-service/src/iter3/: handlers.rs
docker-rust/: Cargo.toml  Dockerfile-basic  Dockerfile-lite  docker-compose.yml
docker-rust/src/: main.rs
ezytutors/: Cargo.toml
ezytutors/tutor-db/: .env  database.sql
ezytutors/tutor-nodb/: Cargo.toml  course3.json
ezytutors/tutor-nodb/src/: handlers.rs
ezytutors/tutor-nodb/tests/: course1.json  course2.json  get-course.sh  get-courses.sh  post-courses.sh
p2p-learn/: Cargo.toml
scenario1/: Cargo.toml
scenario1/http/src/: httprequest.rs  httpresponse.rs
scenario1/httpserver/: Cargo.toml
scenario1/httpserver/public/: 404.html  health.html
scenario1/httpserver/src/: handler.rs  server.rs
server-side-apps/: Cargo.toml
server-side-apps/tutor-web-app-ssr/: Cargo.toml
server-side-apps/tutor-web-app-ssr/static/: static-web-page.html  style.css
server-side-apps/tutor-web-service/: Cargo.toml
server-side-apps/tutor-web-service/src/iter3/: db_access.rs
server-side-apps/tutor-web-service/src/iter5/dbaccess/: course.rs
server-side-apps/tutor-web-service/src/iter5/dbscripts/: tutor-course.sql
tutor-auth/: .env  Cargo.toml
tutor-auth/src/iter6/: handler.rs  model.rs  routes.rs
tutor-auth/src/iter6/handler/: auth.rs  course.rs
tutor-auth/static/iter6/: register.html  signin.html  user.html
tutor-registration/: Cargo.toml
tutor-registration/src/iter5/: dbaccess.rs  error.rs  errors.rs  handler.rs  model.rs  routes.rs  state.rs
tutor-registration/static/iter2/: form.html
tutor-registration/static/iter4/: list.html
tutor-registration/static/iter5/: register.html
(+19 files in other folders)
