[package]
name = "tutor-registration"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.8.0"
awc = "3.5.0"
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tera = "1.20.0"
sqlx = { version = "0.6.2", default_features = false, features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
rust-argon2 = "2.1.0"
dotenv = "0.15.0"

[dev-dependencies]
actix-rt = "2.10.0"
