[package]
name = "tutor-db"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
openssl = { version = "0.10.64", features = ["vendored"] }
serde = { version = "1.0.202", features = ["derive"] }
sqlx = { version = "0.7.4", default-features = false, features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
